# gel_workflows

./: README.md  app.py  main.py  pyproject.toml  workflows.jsonl
src/workflows/: __init__.py  app.py  workflow.json  workflows.jsonl
src/workflows/common/: edit_workflow.py  entry.py  list_workflows.py  types.py
src/workflows/pages/: edit_workflow.py  entry.py  list_workflows.py  types.py
