[project]
name = "workflows"
version = "0.1.0"
description = "Workflows"
readme = "README.md"
authors = [
    { name = "anbuzin", email = "andrey@geldata.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.43.2",
    "pydantic>=2.6.1"
]

[project.scripts]
gui = "workflows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
